fix: add proper vertical spacing to article and partners sections
- Add padding-top: 120px to .home-article section with responsive scaling
- Add padding-top: 120px to .home-partners section with responsive scaling
- Match static version spacing: calc(70px + 50 * (100vw - 320px) / 1120) for screens < 1440px
- Ensures consistent spacing between sections regardless of content visibility
- Resolves visual spacing mismatch between WordPress and static versions

--- a/src/scss/_home-article.scss
+++ b/src/scss/_home-article.scss
@@ -1,5 +1,10 @@
 // Home Article Section Styles
 .home-article {
+  padding-top: 120px;
+  
+  @media (max-width: 1440px) {
+    padding-top: calc(70px + 50 * (100vw - 320px) / 1120);
+  }
   .articles-blog-body__article {
     display: flex;
     align-items: flex-start;
