--- a/src/scss/_home-partners.scss
+++ b/src/scss/_home-partners.scss
@@ -1,5 +1,10 @@
 // Home Partners Section Styles
 .home-partners {
+  padding-top: 120px;
+  
+  @media (max-width: 1440px) {
+    padding-top: calc(70px + 50 * (100vw - 320px) / 1120);
+  }
   &__container {
     max-width: 56.875rem;
   }
